crates/voom-cli/tests/snapshots/library_envelope__library_envelope__library_add_outputs_record.snap
---
source: crates/voom-cli/tests/library_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "library",
  "status": "ok",
  "data": {
    "library_id": 1,
    "slug": "films",
    "display_name": "Films",
    "media_kind": "movie",
    "description": "home movies",
    "enabled": true,
    "created_at": "[ts]",
    "updated_at": "[ts]"
  },
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": null
}
