crates/voom-cli/tests/snapshots/library_envelope__library_envelope__root_add_missing_library_is_not_found.snap
---
source: crates/voom-cli/tests/library_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "library",
  "status": "error",
  "data": null,
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": {
    "code": "NOT_FOUND",
    "message": "not found: library 99 or referenced storage root not found"
  }
}
