crates/voom-cli/tests/snapshots/library_envelope__library_envelope__root_show_outputs_record.snap
---
source: crates/voom-cli/tests/library_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "library",
  "status": "ok",
  "data": {
    "root_id": 1,
    "library_id": 1,
    "owner_node_id": 1,
    "provider_kind": "local_filesystem",
    "provider_locator": "[path]",
    "display_locator": "[path]",
    "state": "configured",
    "root_epoch": 0,
    "activation_identity": null,
    "include_globs": [],
    "exclude_globs": [],
    "extension_allowlist": [],
    "scan_mode": "manual_recursive",
    "symlink_policy": "reject",
    "hidden_file_policy": "ignore",
    "stability_seconds": 0,
    "debounce_seconds": 0,
    "default_output_root_id": null,
    "default_staging_root_id": null,
    "default_backup_root_id": null,
    "enabled": true,
    "effectively_available": false,
    "availability_reason": "root_not_active",
    "created_at": "[ts]",
    "updated_at": "[ts]"
  },
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": null
}
