crates/voom-cli/tests/snapshots/library_envelope__library_envelope__scan_root_disabled_is_blocked.snap
---
source: crates/voom-cli/tests/library_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "scan",
  "status": "error",
  "data": {
    "status": "blocked",
    "reason": "root_disabled",
    "library_id": 1,
    "storage_root_id": 1,
    "provider_locator": "[path]"
  },
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": {
    "code": "BLOCKED",
    "message": "library root 1 is blocked (root_disabled); not scanned"
  }
}
